--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btnAC"
+                android:id="@+id/btn_limpar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -76,7 +76,7 @@
                 android:textSize="28dp" />
 
             <ImageButton
-                android:id="@+id/btnBack"
+                android:id="@+id/btn_backspace"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -84,7 +84,7 @@
                 android:backgroundTint="@color/black" />
 
             <Button
-                android:id="@+id/btnDecimal"
+                android:id="@+id/btn_decimal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -94,7 +94,7 @@
                 android:textSize="28dp" />
 
             <Button
-                android:id="@+id/btnDiv"
+                android:id="@+id/btn_divisao"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -142,7 +142,7 @@
                 android:textSize="28dp" />
 
             <Button
-                android:id="@+id/btnMult"
+                android:id="@+id/btn_multiplicacao"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -190,7 +190,7 @@
                 android:textSize="28dp" />
 
             <Button
-                android:id="@+id/btnMenos"
+                android:id="@+id/btn_subtracao"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -238,7 +238,7 @@
                 android:textSize="28dp" />
 
             <Button
-                android:id="@+id/btnMais"
+                android:id="@+id/btn_soma"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -274,7 +274,7 @@
                 android:textSize="28dp" />
 
             <Button
-                android:id="@+id/btn."
+                android:id="@+id/btn_ponto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
