--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="gray">#AEAEAE</color>
     <color name="darkgray">#302B2B</color>
     <color name="green">#3E6A26</color>
-
+    <color name="darkorange">#D10500</color>
 
 
 </resources>
